@@ -2,6 +2,7 @@ DOMjudge Programming Contest Judging System
 
 Version 3.2.5 - DEV
 -------------------
+ - Bugfix: check that compilation creates executable file, closes: #119.
 
 Version 3.2.4 - 12 September 2012
 ---------------------------------
